namespace HollowKnight.Player
{
    public enum KnightSpriteType
    {
        Idle,
        Walking,
        Jumping,
        SideSlash,
        UpSlash,
        DownSlash,
        Damaged,
        HealPrep,
        HealPost,
        SpiritCast,
        Respawning,
        Sitting,
        Dashing
    }
}