namespace HollowKnight.Player
{
    public enum KnightState
    {
        Idle,
        Running,
        Jumping,
        Falling,
        Attacking, //for nail atttack
        Spellcasting, //for fireball
        Dashing,
        Healing,
        Damaged,
        Respawning,
        Sitting,
        Dead
    }
}
